Pin ruff version in CI and devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,5 +13,6 @@
     }
   },
 
-  "postCreateCommand": "pip install -e . && pip install pytest ruff black"
+  "postCreateCommand": "pip install -e . && pip install pytest ruff==0.14.10 black"
+
 }
