--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-          pip install pytest ruff black
+          pip install pytest ruff==0.14.10 black
+    
 
       - name: Lint (ruff)
         run: ruff check .
