--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout (full history for tags)
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -23,8 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-          pip install pytest ruff==0.14.10 black
-    
+          pip install pytest ruff==0.14.10 build
 
       - name: Lint (ruff)
         run: ruff check .
@@ -34,3 +35,6 @@ jobs:
 
       - name: Test (pytest)
         run: pytest
+
+      - name: Build (sanity check)
+        run: python -m build
