--- a/.github/workflows/cut_tag.yml
+++ b/.github/workflows/cut_tag.yml
@@ -4,12 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Release version (e.g. 0.1.7 or v0.1.7)'
+        description: "Release version (e.g. 0.1.9 or v0.1.9)"
         required: true
         type: string
 
 permissions:
   contents: write
+  actions: write
 
 jobs:
   cut_tag:
@@ -28,9 +29,9 @@ jobs:
         shell: bash
         run: |
           RAW="${{ inputs.version }}"
-          RAW="${RAW#v}"              # remove leading v if present
+          RAW="${RAW#v}"  # remove leading v if present
           if [[ ! "$RAW" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Invalid version: ${{ inputs.version }} (expected 0.1.7 or v0.1.7)" >&2
+            echo "Invalid version: ${{ inputs.version }} (expected 0.1.9 or v0.1.9)" >&2
             exit 1
           fi
           echo "tag=v$RAW" >> "$GITHUB_OUTPUT"
@@ -48,9 +49,13 @@ jobs:
       - name: Ensure pyproject.toml version matches
         shell: bash
         run: |
-          FILE_VER="$(grep -E '^[[:space:]]*version[[:space:]]*=' pyproject.toml | head -n1 | sed -E 's/^[[:space:]]*version[[:space:]]*=[[:space:]]*"([^"]+)".*/\1/')"
+          FILE_VER="$(grep -E '^[[:space:]]*version[[:space:]]*=' pyproject.toml \
+            | head -n1 \
+            | sed -E 's/^[[:space:]]*version[[:space:]]*=[[:space:]]*"([^"]+)".*/\1/')"
+
           echo "pyproject.toml version=$FILE_VER"
           echo "requested version=${{ steps.v.outputs.plain }}"
+
           if [[ "$FILE_VER" != "${{ steps.v.outputs.plain }}" ]]; then
             echo "Mismatch: pyproject.toml=$FILE_VER but requested=${{ steps.v.outputs.plain }}" >&2
             exit 1
@@ -59,7 +64,20 @@ jobs:
       - name: Create and push tag
         shell: bash
         run: |
-          git config user.name  "github-actions[bot]"
+          git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git tag "${{ steps.v.outputs.tag }}"
           git push origin "refs/tags/${{ steps.v.outputs.tag }}"
+
+      - name: Trigger Release workflow
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const tag = "${{ steps.v.outputs.tag }}";
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: "release.yml",
+              ref: tag,
+            });
+            core.info(`Triggered release.yml for ${tag}`);
