--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - "v*"
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -22,37 +23,20 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-          cache: "pip"
+          cache: pip
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-          pip install pytest ruff==0.14.10 build
-
-      - name: Lint (ruff)
-        run: ruff check .
-
-      - name: Format check (ruff)
-        run: ruff format --check .
-
-      - name: Test (pytest)
-        run: pytest
-
-      - name: Clean dist
-        run: rm -rf dist build *.egg-info
 
       - name: Build package
-        run: python -m build
-
-      - name: Delete existing GitHub Release (if any)
-        env:
-          GH_TOKEN: ${{ github.token }}
         run: |
-          TAG="${{ github.ref_name }}"
-          gh release view "$TAG" >/dev/null 2>&1 && gh release delete "$TAG" -y || echo "No release to delete"
+          python -m pip install build
+          python -m build
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/*
+          files: |
+            dist/*
