--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
-name: CI
+name: PR CI
 
 on:
   pull_request:
 
 jobs:
   test:
-    name: test
+    name: pr-ci-test
     runs-on: ubuntu-latest
 
     steps:
