chore: add concurrency for tag and release workflows

--- a/.github/workflows/cut_tag.yml
+++ b/.github/workflows/cut_tag.yml
@@ -12,6 +12,11 @@ permissions:
   contents: write
   actions: write
 
+concurrency:
+  group: cut-tag
+  cancel-in-progress: false
+
+
 jobs:
   cut_tag:
     runs-on: ubuntu-latest
