chore: ignore python cache and packaging artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,19 @@ __marimo__/
 
 # OS specific
 .DS_Store
+
+# Python cache
+__pycache__/
+*.py[cod]
+
+# Packaging artifacts
+*.egg-info/
+build/
+dist/
+
+# Test artifacts
+.pytest_cache/
+
+# Virtual environments
+.venv/
+venv/
